<resources>
    <string name="app_name">Virtual Try On App</string>
    <string name="select_photo">Select photo</string>
    <string name="from_gallery">From Gallery</string>
    <string name="take_picture">Take Picture</string>
    <string name="cancel">Cancel</string>
    <string name="photo">Photo</string>
    <string name="upload">Upload</string>
    <string name="description">Description</string>
    <string name="posted_at">Posted at:</string>
    <string name="shared_photo">Shared photo</string>
    <string name="login">Login</string>
    <string name="icon_email">Icon email</string>
    <string name="email">Email</string>
    <string name="icon_lock">Icon lock</string>
    <string name="password">Password</string>
    <string name="or_sign_in">Don\'t have an account? Sign Up.</string>
    <string name="register">Sign Up</string>
    <string name="person">Person</string>
    <string name="name">Name</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="change_language">Change Language</string>
    <string name="logout">Logout</string>
    <string name="flat_illustration">Flat illustration</string>
    <string name="welcome_to_storyapp">Welcome to TryOn App</string>

    <string name="post_as">Post story as </string>
    <string name="hello_as">Hello </string>

    <string name="choose_picture">Choose a picture</string>
    <string name="input_picture">Please input picture</string>
    <string name="input_des">Please input description</string>
    <string name="share_story">Add Image</string>
    <string name="detail_title">%1$s\'s Story</string>


    <string name="you_sure">Are you sure?</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>


    <string name="input_email">Please input your email here</string>
    <string name="input_pass">Please input your password here</string>
    <string name="invalid_email">Email is invalid</string>
    <string name="invalid_password">Password is invalid</string>

    <string name="email_required">Email is required</string>
    <string name="name_required">Name is required</string>
    <string name="password_required">Password is required</string>
    <string name="cpass_required">Confirm password is required</string>
    <string name="pass_length">Password must be 8 characters long</string>
    <string name="pass_not_match">Password not match</string>

    <string name="timeout">Timeout!! please try again later</string>
    <string name="email_taken">Email is already taken</string>
    <string name="unauthorized">Email or password might be wrong</string>
    <string name="user_created">User created</string>
    <string name="success_login">Login successfully</string>
    <string name="error_message">Error message :</string>
    <string name="message">Message  :</string>
    <string name="success_load">Load successfully. Message:</string>
    <string name="error_load">Failed to load. Message:</string>
    <string name="see_password">See password</string>
    <string name="floatin_button">Floating button</string>
    <string name="ini_splash">it\'s splash screen</string>
    <string name="no_data_icon">No data icon</string>
    <string name="no_data">No Data</string>


    <string name="package_name">com.example.storyapp</string>
    <string name="create_account">Create account</string>


</resources>